apps/kube/agones/cryptothrone/manifests/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
    name: cryptothrone
    labels:
        app.kubernetes.io/part-of: cryptothrone
        kbve.com/stack: agones
