apps/kube/agones/cryptothrone/manifests/game-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
    name: cryptothrone-game-route
    namespace: cryptothrone
    labels:
        app.kubernetes.io/part-of: cryptothrone
spec:
    parentRefs:
        - group: gateway.networking.k8s.io
          kind: Gateway
          name: kbve-gateway
          namespace: kbve
    hostnames:
        - game.cryptothrone.com
    rules:
        - matches:
              - path:
                    type: PathPrefix
                    value: /
          timeouts:
              backendRequest: 3600s
          backendRefs:
              - group: ''
                kind: Service
                name: cryptothrone-game
                port: 7979
                weight: 1
